@@ -4,23 +4,20 @@ import com.tramchester.config.GraphDBConfig;
 import com.tramchester.config.RemoteDataSourceConfig;
 import com.tramchester.config.TemporaryStationsWalkIds;
 import com.tramchester.domain.StationClosures;
-import com.tramchester.domain.StationIdPair;
 import com.tramchester.integration.testSupport.TestGroupType;
-import com.tramchester.integration.testSupport.config.closures.StationClosuresListForTest;
 import com.tramchester.integration.testSupport.naptan.NaptanRemoteDataSourceTestConfig;
 import com.tramchester.integration.testSupport.nptg.NPTGDataSourceTestConfig;
 import com.tramchester.integration.testSupport.postcodes.PostCodeDatasourceConfig;
 import com.tramchester.integration.testSupport.rail.RailRemoteDataSourceConfig;
 import com.tramchester.testSupport.TestConfig;
 import com.tramchester.testSupport.TestEnv;
-import com.tramchester.testSupport.UpcomingDates;
 import com.tramchester.testSupport.reference.TramStations;
 
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 
-import static com.tramchester.testSupport.reference.TramStations.*;
+import static com.tramchester.testSupport.reference.TramStations.PiccadillyGardens;
 
 public abstract class IntegrationTestConfig extends TestConfig {
 
@@ -32,16 +29,36 @@ public abstract class IntegrationTestConfig extends TestConfig {
 
     private static final List<TramStations> closedStations = List.of(PiccadillyGardens);
 
-    public static final StationClosures marketStreetApril2025 = new StationClosuresListForTest(closedStations,
-        UpcomingDates.PiccGardensWorksummer2025,
-        true, Collections.emptySet(), Collections.emptySet());
+//    public static final StationClosures marketStreetApril2025 = new StationClosuresListForTest(closedStations,
+//        UpcomingDates.PiccGardensWorksummer2025,
+//        true, Collections.emptySet(), Collections.emptySet());
 
-    public static final List<StationClosures> CurrentClosures = List.of(marketStreetApril2025);
+    public static final List<StationClosures> CurrentClosures = Collections.emptyList(); //List.of(marketStreetApril2025);
 
-    private static final TemporaryStationsWalkIds piccadillyToMarketStreet = new TemporaryStationsWalkConfigForTest(
-            StationIdPair.of(Piccadilly.getId(), MarketStreet.getId()), UpcomingDates.PiccGardensWorksummer2025);
+//    private static final TemporaryStationsWalkIds piccadillyToMarketStreet = new TemporaryStationsWalkConfigForTest(
+//            StationIdPair.of(Piccadilly.getId(), MarketStreet.getId()), UpcomingDates.PiccGardensWorksummer2025);
 
-    public static final List<TemporaryStationsWalkIds> CurrentStationWalks = Collections.singletonList(piccadillyToMarketStreet);
+    /**
+     * examples
+     * closures
+     *       - stations:
+     *             ids: [ "9400ZZMAPGD" ]
+     *         dateRange:
+     *           begin: 2025-06-03
+     *           end: 2025-08-10
+     *         fullyClosed: true
+     *         diversionsAroundClosure: [ ]
+     *         diversionsToFromClosure: [ ]
+     *
+     * walks
+     *       - stations:
+     *           first: 9400ZZMAPIC
+     *           second: 9400ZZMAMKT
+     *         begin: 2025-06-03
+     *         end: 2025-08-10
+     */
+
+    public static final List<TemporaryStationsWalkIds> CurrentStationWalks = Collections.emptyList();
 
     private final GraphDBTestConfig dbConfig;
 
